[package]
name = "axum-sessions"
version = "0.5.0"
description = "🥠 Cookie-based sessions for Axum via async-session."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-sessions"
license = "MIT"
keywords = ["axum", "session", "sessions", "cookie", "async-session"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/axum-sessions"
documentation = "https://docs.rs/axum-sessions"

[dependencies]
async-session = "3.0"
futures = "0.3"
http-body = "0.4"
tower = "0.4"
tracing = "0.1"

[dependencies.axum]
version = "0.6"
features = ["headers"]

[dependencies.axum-extra]
version = "0.7"
features = ["cookie-signed"]

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["sync"]

[dev-dependencies]
http = "0.2"
hyper = "0.14"
serde = "1"

[dev-dependencies.rand]
version = "0.8"
features = ["min_const_gen"]

[dev-dependencies.tokio]
version = "1.20"
default-features = false
features = ["macros", "rt-multi-thread"]
